Update idpcatalog ishan-test-component

--- a/testishan123.yaml
+++ b/testishan123.yaml
@@ -7,6 +7,6 @@ owner: user:account/ishan.gude@harness.io
 spec:
   lifecycle: production
 metadata:
-  description: test
+  description: test1234
   tags:
   - rest
