--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,11 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: accesscontrol-service
+  name: ishan-test
   description: The official Access control REST APIs
 spec:
   type: openapi
   lifecycle: production
-  owner: plplayacc
+  owner: ishan
   definition:
     $text: https://app.harness.io/prod1/authz/api/openapi.json 
