--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,14 +1,12 @@
 apiVersion: backstage.io/v1alpha1
-kind: Group
+kind: Component
 metadata:
-  name: infrastructure
-  description: The infra business unit
+  name: "ishan-test"
+  annotations:
+    backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
+    backstage.io/kubernetes-label-selector: 'app=idp-ui'
+    backstage.io/kubernetes-namespace: '642d4b9741ee3c555d4e1a7f'
 spec:
-  type: business-unit
-  profile:
-    displayName: Infrastructure
-    email: infrastructure@example.com
-    picture: https://example.com/groups/bu-infrastructure.jpeg
-  parent: ops
-  children: [backstage, other]
-  members: [jdoe]
+  type: service
+  owner: "IDPAdmin"
+  lifecycle: experimental
