--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,8 +1,11 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: API
 metadata:
-  name: "ishan-test"
+  name: test-ishan-api
+  description: The official Access control REST APIs
 spec:
-  type: service
-  owner: "IDPAdmin"
-  lifecycle: experimental
+  type: openapi
+  lifecycle: production
+  owner: ishan
+  definition:
+    $text: https://app.harness.io/prod1/authz/api/openapi.json
