--- a/catalog-info-api.yaml
+++ b/catalog-info-api.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: "ishan-test"
   annotations:
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: {}
     github.com/project-slug: Aashrit-Harness/hello-world-app
     backstage.io/kubernetes-label-selector: 'app=idp-ui'
     backstage.io/kubernetes-namespace: '642d4b9741ee3c555d4e1a7f'
@@ -11,7 +11,6 @@ metadata:
     pagerduty.com/service-id: PT5ED69
     circleci.com/project-slug: github/vigneswara-propelo/python-pipeline-samples
     jenkins.io/github-folder: 'CDS-68313'
-    backstage.io/techdocs-ref: ishan-test
 spec:
   type: service
   owner: "Ishan"
