--- a/catalog-info-api.yaml
+++ b/catalog-info-api.yaml
@@ -1,17 +1,48 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: API
 metadata:
-  name: "ishan-test"
-  annotations:
-    backstage.io/techdocs-ref: {}
-    github.com/project-slug: Aashrit-Harness/hello-world-app
-    backstage.io/kubernetes-label-selector: 'app=idp-ui'
-    backstage.io/kubernetes-namespace: '642d4b9741ee3c555d4e1a7f'
-    jira/project-key: IDP
-    pagerduty.com/service-id: PT5ED69
-    circleci.com/project-slug: github/vigneswara-propelo/python-pipeline-samples
-    jenkins.io/github-folder: 'CDS-68313'
+  name: accesscontrol-service
+  description: The official Access control REST APIs
 spec:
-  type: service
-  owner: "Ishan"
-  lifecycle: experimental
+  type: openapi
+  lifecycle: production
+  owner: plplayacc
+  definition: |-
+    // Copyright 2015 gRPC authors.
+    //
+    // Licensed under the Apache License, Version 2.0 (the "License");
+    // you may not use this file except in compliance with the License.
+    // You may obtain a copy of the License at
+    //
+    //     http://www.apache.org/licenses/LICENSE-2.0
+    //
+    // Unless required by applicable law or agreed to in writing, software
+    // distributed under the License is distributed on an "AS IS" BASIS,
+    // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    // See the License for the specific language governing permissions and
+    // limitations under the License.
+
+    syntax = "proto3";
+
+    option java_multiple_files = true;
+    option java_package = "io.grpc.examples.helloworld";
+    option java_outer_classname = "HelloWorldProto";
+    option objc_class_prefix = "HLW";
+
+    package helloworld;
+
+    // The greeting service definition.
+    service Greeter {
+      // Sends a greeting
+      rpc SayHello (HelloRequest) returns (HelloReply) {}
+    }
+
+    // The request message containing the user's name.
+    message HelloRequest {
+      string name = 1;
+    }
+
+    // The response message containing the greetings
+    message HelloReply {
+      string message = 1;
+    }
