--- a/idp-workflow.yaml
+++ b/idp-workflow.yaml
@@ -9,7 +9,7 @@ metadata:
     backstage.io/edit-url: https://github.com/samriddhi-daga/hello-world/edit/main/template4.yaml
     backstage.io/source-location: url:https://github.com/samriddhi-daga/hello-world/tree/main/
   name: ishan-test-workflow
-  title: Workflow Template UI
+  title: Ishan Test Workflow
   description: An template for the scaffolder that triggers a simple pipeline
   tags:
     - pipeline
@@ -17,7 +17,7 @@ metadata:
   uid: 870c4f18-095e-4c52-b92d-ed3f2532238f
   etag: bc52d1f7005a4f8a8102af69e16747141b6da69f
 spec:
-  owner: user:default/samriddhi.daga
+  owner: user:default/ishan.gude
   lifecycle: production
   type: service
   parameters:
