Update idpcatalog test-gitsync-issue-2

--- a/git_sync_issue2.yaml
+++ b/git_sync_issue2.yaml
@@ -7,6 +7,6 @@ owner: ishan.gude@harness.ip
 spec:
   lifecycle: deprecated
 metadata:
-  description: Default Branch test
+  description: Default Branch test New 1
   tags:
   - bn
