--- a/docs/test-mix-case.yaml
+++ b/docs/test-mix-case.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: TiShan***
+  name: TiShan
   namespace: default
   description: new ishan test 
   annotations:
