--- a/docs/testlowercasename.yaml
+++ b/docs/testlowercasename.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: TiShan
+  name: ishantest
   namespace: default
   description: new ishan test updated
   annotations:
