--- a/docs/testlowercasename.yaml
+++ b/docs/testlowercasename.yaml
@@ -1,7 +1,7 @@
-apiVersion: backstage.io/v1alpha1
+newapiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ishantest
+  name: ishantestnew
   namespace: default
   description: new ishan test updated
   annotations:
