--- a/docs/testgitsyncnew.yaml
+++ b/docs/testgitsyncnew.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ishantestnew
+  name: ishantestnewone
   namespace: default
   description: new ishan test updated
   annotations:
