--- a/docs/change-name-test.yaml
+++ b/docs/change-name-test.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: tetstNewSyncUpdatedNew
+  name: tetstNewSyncUpdatedNewOne
   namespace: default
   description: new refresh updated
   annotations:
