--- a/catalog-info-apitest.yaml
+++ b/catalog-info-apitest.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: accesscontrol-service
+  name: Access-Control
   description: The official Access control REST APIs
 spec:
   type: openapi
