--- a/testsanity.yaml
+++ b/testsanity.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "hello-world-app-create"
   annotations:
     backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master/plugins/techdocs-backend/examples/documented-component
-    github.com/project-slug: IDP
+    github.com/project-slug: https://github.com/ishan3003/OpenTofu-Testing
     backstage.io/kubernetes-label-selector: 'app=idp-ui'
     backstage.io/kubernetes-namespace: '642d4b9741ee3c555d4e1a7f'
     jira/project-key: IDP
