--- a/testsanity.yaml
+++ b/testsanity.yaml
@@ -8,7 +8,7 @@ metadata:
     backstage.io/kubernetes-label-selector: 'app=idp-ui'
     backstage.io/kubernetes-namespace: '642d4b9741ee3c555d4e1a7f'
     jira/project-key: IDP
-    pagerduty.com/service-id: PT5ED69
+    pagerduty.com/service-id: PA6QFF0
     circleci.com/project-slug: github/vigneswara-propelo/python-pipeline-samples
     jenkins.io/github-folder: 'CDS-68313'
     firehydrant.com/service-name: 'pipeline-service'
