--- a/group.yaml
+++ b/group.yaml
@@ -5,5 +5,6 @@ identifier: testgroup
 name: test-group
 spec:
   lifecycle: ''
+  parent: group:account/testidp1
   members:
   - user:account/ishan.gude@harness.io
