--- a/testishgud.yaml
+++ b/testishgud.yaml
@@ -1,7 +1,7 @@
 apiVersion: harness.io/v1
 kind: Component
 type: idp-ui-automation-type
-identifier: testimportyaml
+identifier: testimportyamlishan
 name: testimportyaml
 owner: timothy
 spec:
