--- a/scorecard-check.yaml
+++ b/scorecard-check.yaml
@@ -9,8 +9,8 @@ projectIdentifier: ishantestscope
 spec:
   lifecycle: test
 metadata:
-  annotation:
-    backstage.io/source-location: https://github.com/ishan3003/OpenTofu-Testing
   description: Test Scorecard
+  annotations:
+    backstage.io/source-location: https://github.com/ishan3003/OpenTofu-Testing
   tags:
   - bn
