Update idpcatalog test-create-scorecard-check

--- a/testprod0sanity.yaml
+++ b/testprod0sanity.yaml
@@ -5,7 +5,7 @@ identifier: testcreatescorecardcheck
 name: test-create-scorecard-check
 owner: user:account/devesh.mishra@harness.io
 spec:
-  lifecycle: experimental
+  lifecycle: production
 metadata:
   description: Scorecard check
   tags:
