--- a/test-santy.yaml
+++ b/test-santy.yaml
@@ -8,7 +8,7 @@ metadata:
     backstage.io/view-url: https://github.com/sathish-soundarapandian/onboarding-test/tree/main/CasingTest.yaml
     backstage.io/edit-url: https://github.com/sathish-soundarapandian/onboarding-test/edit/main/CasingTest.yaml
     backstage.io/source-location: url:https://github.com/sathish-soundarapandian/onboarding-test/tree/main/
-  name: test-ishan-name-new-one
+  name: test-ishan-name-new-one-two
   uid: afe17de4-4c2c-4047-8d3f-e2b81840087e
   etag: d69f76a077a7ec27491d2d68923c28d878897ba0
 spec:
