Idp automation branch (#7)
* Create idpcatalog test

* Update idpcatalog idp-git-feature-branch-511358idp-edited-feature-branch-969302

* Create idpcatalog test

* Update idpcatalog idp-edited-feature-branch-197379

* Create idpcatalog test

* Update idpcatalog edited-git-branch

* Create idpcatalog test

* Update idpcatalog idp-edited-feature-branch-155615

* Create idpcatalog test

* Update idpcatalog idp-edited-feature-branch-379148

* Create idpcatalog test

* Update idpcatalog idp-edited-feature-branch-440564

* Create idpcatalog test

* Update idpcatalog enity-non-default-updated

* Create idpcatalog test

* Create idpcatalog test

* Create idpcatalog test

* Update idpcatalog idp-edited-feature-branch-691516

* Create testimport.yaml

* Create testimportrbac.yaml

* Create import-workflow.yaml

* Create testimportcomponent.yaml

* Create idpcatalog test

* Update testbugbashg.yaml

* Create idpcatalog test

* Update idpcatalog Test-Workflow-Branch-selector

* Update catalog-info-api.yaml

* Update catalog-info-apitest.yaml

* Update catalog-info-apitest.yaml

* Update catalog-info-apitest.yaml

* Create testsanity.yaml

* Update testsanity.yaml

* Update testsanity.yaml

* Create idpcatalog test

* Update ishan.yaml

* Create test-import.yaml

* Create testishgud.yaml

* Update testishgud.yaml

* Update idpcatalog testimportyaml

* Create idpcatalog test

* Create idpcatalog test

* Delete test-ishan-123444555.yaml

* Create idpcatalog test

* Update idpcatalog test-non-default

* Create idpcatalog test

* Create idpcatalog test

* Create idpcatalog test

* Update idpcatalog idp-automation-git-feature-branch-edited

* Delete automation-random.yaml

* Add IDP component metadata for idpentitycreategitfeaturebranch

* Add IDP component metadata for idpentitycreategitfeaturebranch

* Add IDP component metadata for idpentitycreategitfeaturebranch

* Add IDP component metadata for idpentitycreategitfeaturebranch

* Create import-automation-workflow.yaml

---------


--- a/catalog-info-apitest.yaml
+++ b/catalog-info-apitest.yaml
@@ -1,11 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: accesscontrol-service
-  description: The official Access control REST APIs
+  name: Access-Control
+  description: The official Access control REST
 spec:
   type: openapi
-  lifecycle: production
+  lifecycle: development
   owner: plplayacc
   definition: |-
     // Copyright 2015 gRPC authors.
