--- a/testishgud.yaml
+++ b/testishgud.yaml
@@ -1,8 +1,8 @@
 apiVersion: harness.io/v1
 kind: Component
 type: idp-ui-automation-type
-identifier: test124
-name: test-plugin-enablement
+identifier: testimportyamlishan
+name: testimportyaml
 owner: timothy
 spec:
   lifecycle: deprecated
@@ -19,4 +19,4 @@ spec:
 metadata:
   description: test
   tags:
-  - bn
+  - plugin-test
